--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
-    "styled-components": "^3.1.6"
+    "redux-saga": "^0.16.0",
+    "styled-components": "^3.1.6",
+    "three": "^0.89.0",
+    "whs": "^2.1.9"
   },
   "devDependencies": {
     "webpack": "^3.10.0",
