--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "whs": "^2.1.9"
   },
   "devDependencies": {
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-env": "^1.6.1"
+    "babel-preset-stage-0": "^6.24.1",
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.11.1"
   },
   "scripts": {
     "start": "webpack-dev-server --hot --inline --config ./webpack/webpack.config.dev.js"
